--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,7 @@
     {% include header.html %}
     <div class="container">
         <div class="row">
-            <div class="content">
-                <h1><a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
+            <div id="content" class="col-md-12">
                 {{ content }}
             </div>
         </div>
