--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,3 +1,9 @@
 ---
 layout: default
 ---
+<article id="page">
+    <header>
+        <h1 class="post-title">{{ page.title | escape }}</h1>
+    </header>
+    {{ content }}
+</article>
