--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,11 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
     <link rel="stylesheet" href="{{ "/css/main.css" | relative_url }}">
+    {% comment %}
+    {% if page.url contains "/episodes/" %}
+    <link rel="stylesheet" href="https://cdn.plyr.io/2.0.13/plyr.css">
+    {% endif %}
+    {% endcomment %}
 
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
